# conqueror

./: CMakeLists.txt  LICENSE  main.cpp
cmake/: GoogleTest.cmake
src/: Channel.h  Definitions.h  Encoder.h  LockFreeStack.h  MPMC.h  MPSC.h  MPSCBoundedQueue.h  RCU.h  SPSC.h  SPSCBoundedQueue.h  ShMem.h
src/allocation/: SeqAllocator.h
src/channel/: Channel.h  Encoder.h  ShMem.h
src/os/: LinuxError.h  Process.h  Semaphore.h  ShMem.h
src/os/perf/: Perf.h
tests/: CMakeLists.txt  allocation_test.cpp  channel_test.cpp  lock_free_stack_test.cpp  mpmc_test.cpp  mpsc_test.cpp  perf_test.cpp  rcu_test.cpp  scsp_test.cpp  semaphore_test.cpp
